--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: gradle:latest
+    container: gradle:6-jdk11
     steps:
       - name: "Clone repo"
         uses: actions/checkout@v3
       - name: "Build gradle"
         run: |
-          chmod +x ci/build-app.sh
-          ./ci/build-app.sh
+          chmod +x ci/build-app.sh && ci/build-app.sh
