--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,24 @@ on:
   workflow_dispatch:
     branches: main
 jobs:
-  build:
+  clone:
     runs-on: ubuntu-latest
-    container: gradle:6-jdk11
     steps:
       - name: "Clone repo"
         uses: actions/checkout@v3
+      - name: "Upload Repo"
+      uses: actions/upload-artifact@v3
+      with:
+        name: code
+        path: "."
+  build_test:
+    runs-on: ubuntu-latest
+    container: gradle:6-jdk11
+    needs: [clone]
+      - name: "Download Repo"
+        uses: actions/download-artifact@v3
+        with:
+          name: code
       - name: "Run tests"
         run: |-
           chmod +x ci/unit-test-app.sh
@@ -20,8 +32,35 @@ jobs:
       - name: "Build gradle"
         run: |
           chmod +x ci/build-app.sh && ci/build-app.sh
-      - name: "Upload artifacts"
+      - name: "Upload Repo"
         uses: actions/upload-artifact@v3
         with:
           name: code
           path: "."
+      - name: "Upload jar"
+        uses: actions/upload-artifact@v3
+        with:
+          name: jar
+          path: app/build/libs/app-0.1-all.jar
+  docker_image:
+    runs-on: ubuntu-latest
+    needs: [build_test]
+    permissions:
+      packages: write
+
+    env:
+      docker_username: ${{ var.DOCKER_USERNAME }}
+      docker_password: ${{ secrets.DOCKER_TOKEN }}
+      GIT_COMMIT: ${{ github.sha }}
+
+    steps:
+      - name: "Download code"
+        uses: actions/download-artifact@v3
+        with:
+          name: code
+          path: .
+      - name: build docker
+        run: chmod +x ci/build-docker.sh && ci/build-docker.sh
+      - name: push docker
+        run: chmod +x ci/push-docker.sh && ci/push-docker.sh
+    
