--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,12 @@ on:
   pull_request:
     branches: main
   workflow_dispatch:
+
+env:
+  docker_username: ${{ github.actor }}
+  docker_password: ${{ secrets.GITHUB_TOKEN }}
+  GIT_COMMIT: ${{ github.sha }}
+
 jobs:
   clone:
     runs-on: ubuntu-latest
@@ -47,12 +53,6 @@ jobs:
     needs: [build_test]
     permissions:
       packages: write
-
-    env:
-      docker_username: ${{ github.actor }}
-      docker_password: ${{ secrets.GITHUB_TOKEN }}
-      GIT_COMMIT: ${{ github.sha }}
-
     steps:
       - name: "Download code"
         uses: actions/download-artifact@v3
@@ -63,4 +63,25 @@ jobs:
         run: chmod +x ci/build-docker.sh && ci/build-docker.sh
       - name: push docker
         run: chmod +x ci/push-docker.sh && ci/push-docker.sh
-    
+  component-test:
+    runs-on: ubuntu-latest
+    needs: [docker_image]
+    steps:
+      - name: "Download code"
+        uses: actions/download-artifact@v3
+        with:
+          name: code
+          path: .
+      - name: Execute component test
+        run: chmod +x ci/component-test.sh && ci/component-test.sh
+  performance-test:
+    runs-on: ubuntu-latest
+    needs: [docker_image]
+    steps:
+      - name: "Download code"
+        uses: actions/download-artifact@v3
+        with:
+          name: code
+          path: .
+      - name: Execute component test
+        run: chmod +x ci/performance-test.sh && ci/performance-test.sh
